[package]
name = "naam"
version = "0.1.0"
authors = ["Anthony Ramine <nox@nox.paris>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[lib]
test = false

[dependencies]
stable_deref_trait = {version = "1.2", default-features = false}

[features]
alloc = ["stable_deref_trait/alloc"]

[[example]]
name = "say-it-thrice"
path = "examples/say-it-thrice.rs"
required-features = ["alloc"]
