[package]
name = "naam_macros"
version = "0.1.0"
authors = ["Anthony Ramine <nox@nox.paris>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.7"
syn = {version = "1.0.48", default-features = false, features = ["derive"]}
synstructure = "0.12.4"
